--- a/Dockerfile.original
+++ b/Dockerfile.original
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["DricCLoudApi/DricWebSiteApi.csproj", "DricWebSiteApi/"]
-RUN dotnet restore "DricCLoudApi/DricWebSiteApi.csproj"
+COPY ["DricCLoudApi/Tecman.csproj", "Tecman/"]
+RUN dotnet restore "DricCLoudApi/Tecman.csproj"
 COPY . .
 WORKDIR "/src/DricCLoudApi"
-RUN dotnet build "DricWebSiteApi.csproj" -c Release -o /app/build
+RUN dotnet build "Tecman.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "DricWebSiteApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "Tecman.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "DricWebSiteApi.dll"]
+ENTRYPOINT ["dotnet", "Tecman.dll"]
