--- a/appsettings.json
+++ b/appsettings.json
@@ -6,9 +6,20 @@
     "Audience": "ExampleAudience",
     "Issuer": "ExampleIssuer",
     "Secret": "MY_SUPER_SECRET_KEY",
-    "MinutesAccessToken": 50,
+    "MinutesAccessToken": 5,
     "MinutesRefreshToken": 20,
     "Minutes": 60,
     "DaysToExpiry": 1
+  },
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5400"
+      },
+      "Https": {
+        "Url": "https://localhost:5401"
+      }
+    }
   }
 }
