--- a/appsettings.json
+++ b/appsettings.json
@@ -11,15 +11,5 @@
     "Minutes": 60,
     "DaysToExpiry": 1
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://localhost:5400"
-      },
-      "Https": {
-        "Url": "https://localhost:5401"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
