--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DbContextSettings": {
-    "ConnectionString": "User ID=postgres;Password=1234;Host=localhost;Port=5432;Database=tecman;Pooling=true;"
+    "ConnectionString": "User ID=postgres;Password=fNrHL1zFwHEKSihaBcMH;Host=containers-us-west-54.railway.app;Port=8006;Database=railway;Pooling=true;"
   },
   "TokenConfiguration": {
     "Audience": "ExampleAudience",
