--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,13 @@
 {
   "DbContextSettings": {
-    "ConnectionString": "User ID=postgres;Password=fNrHL1zFwHEKSihaBcMH;Host=containers-us-west-54.railway.app;Port=8006;Database=railway;Pooling=true;"
+    "ConnectionString": "User ID=postgres;Password=1234;Host=localhost;Port=5432;Database=tecman;Pooling=true;"
   },
   "TokenConfiguration": {
     "Audience": "ExampleAudience",
     "Issuer": "ExampleIssuer",
     "Secret": "MY_SUPER_SECRET_KEY",
     "MinutesAccessToken": 5,
-    "MinutesRefreshToken": 30,
+    "MinutesRefreshToken": 20,
     "Minutes": 60,
     "DaysToExpiry": 1
   },
